--- a/css/style.css
+++ b/css/style.css
@@ -344,19 +344,16 @@ section.feature {
     right: 147px;
 }
 .feature-list{
-    background-image: #ffffff;
-    height: 446px;
-    margin-top: 60px;
+    background: #7f40d7;
     text-align: center;
+
+    clip-path: polygon(0 0, 100% 0, 100% 99%, 93% 97%, 53% 76%, 7% 98%, 0 100%);
+    border-radius: 24px;
 
 }
 .feature-list:hover {
-    background-image: url(../img/feature/box_shape.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 446px;
-    margin-top: 60px;
-    text-align: center;
+
+
   
 }
 
@@ -367,6 +364,178 @@ section.feature {
     border-radius: 50px;
     display: inline-block;
 }
+
+
+
+
+/* 5. Feature css */
+section.relationship {
+    background: #ffffff;
+    padding: 110px 0px 0px  0px;
+}
+.relationship-container {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.relationship-colum{
+    padding-right: 100px;
+
+}
+.relationship-img img{
+    width: 100%;
+}
+
+.relationship-content {
+    padding-left: 14px;
+}
+
+.relationship-content h2 {
+    color: #3B406C;
+    font-size: 44px;
+    font-family: GeorgiaBold;
+    line-height: 54px;
+    margin-top: 14px;
+}
+.relationship-content p {
+    color: #3B406C;
+    font-size: 16px;
+    font-family: PoppinsRegular;
+    line-height: 26px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+.relationship-content a {
+    border-radius: 82px;
+    font-size: 16px;
+    padding: 10px 24px;
+    text-decoration: none;
+    font-family: PoppinsSemiBold;
+    color: #ffffff;
+    background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
+}
+.relationship-content a:hover {
+    
+    box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
+}
+
+
+
+/* 6. How it work */
+.how-work-area {
+    background-image: url(../img/feature/how_work.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 740px;
+    width: 100%;
+    background-position: right;
+}
+
+
+.how-work-content {
+    padding-left: 14px;
+}
+
+.how-work-content h2 {
+    color: #3B406C;
+    font-size: 44px;
+    font-family: GeorgiaBold;
+    line-height: 54px;
+    margin-top: 14px;
+}
+.how-work-content p {
+    color: #3B406C;
+    font-size: 16px;
+    font-family: PoppinsRegular;
+    line-height: 26px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+.how-work-content a {
+    border-radius: 82px;
+    font-size: 16px;
+    padding: 10px 24px;
+    text-decoration: none;
+    font-family: PoppinsSemiBold;
+    color: #ffffff;
+    background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
+}
+.how-work-content a:hover {
+    
+    box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
+}
+
+
+
+/* 6. pricing */
+.price{
+
+}
+.price-heading{
+    text-align: center;
+}
+.price-list {
+    text-align: center;
+    background: #F8FAFF;
+    padding: 44px 60px;
+    border-radius: 14px;
+  
+}
+.price-list:hover{
+    clip-path: polygon(0 0, 100% 0, 100% 99%, 93% 97%, 53% 90%, 7% 98%, 0 100%);
+    border-radius: 24px;
+    transition: .5s;
+    background-color: #ffffff;
+
+}
+.price-list-shadow:hover{
+    filter: drop-shadow( 30px 30px 90px rgba(8, 36, 80,.16));
+}
+
+.price-list h3 {
+    font-size: 24px;
+    color: #3B406C;
+    line-height: 34px;
+}
+
+.price-list h4 {
+    color: #3B406C;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.price-list ul {
+    text-align: left;
+    margin-top: 30px;
+}
+
+.price-list ul li {
+    margin-top: 16px;
+}
+
+.price-list ul li span {
+    font-size: 16px;
+    line-height: 26px;
+    margin-left: 10px;
+}
+
+.price-list h5 {
+    font-size: 44px;
+    line-height: 54px;
+    margin-top: 33px;
+}
+
+.price-list p {
+    margin-top: 10px;
+}
+
+.price-list p a {
+    font-size: 14px;
+    text-decoration: none;
+    color: #3B406C;
+}
+
+
+
 
 
 
@@ -532,94 +701,6 @@ section.client-section {
     box-shadow: 1px 1px 3px #cbcbcb;
 }
 
-
-/* 8. Pricing */
-section.price {
-    padding: 116px  0px 38px 0px;
-}
-.price-heading {
-    text-align: center;
-    margin-bottom: 60px;
-}
-.price-heading h5 {
-    font-size: 20px;
-    color: #F669D6;
-    font-family: 'PoppinsLight';
-    line-height: 20px;
-}
-.price-heading h2 {
-    color: #3B406C;
-    font-size: 44px;
-    font-family: 'GeorgiaBold';
-    line-height: 54px;
-    margin-top: 16px;
-}
-.price-item {
-    background: #ffffff;
-    padding: 30px 30px 30px 30px;
-}
-.price-item:hover{
-    /* box-shadow: -10px 40px 120px 0 rgb(1 47 16 / 8%); */
-    box-shadow: 0px 15px 30px 0 rgb(1 47 16 / 8%);
-    border-radius: 8px;
-}
-
-.price-amount h2 {
-    font-size: 44px;
-    margin-top: 20px;
-    font-family: 'GeorgiaBold';
-    color: #3B406C;
-}
-.price-item:hover h2{
-   color: #F669D6;
-}
-.price-amount h2 span {
-    font-size: 16px;
-    font-family: 'PoppinsRegular';
-    color: #3B406C;
-}
-.price-icon img {
-    width: 128px;
-    height: 128px;
-
-}
-
-.price-icon {
-    text-align: right;
-}
-.price-item-list {
-    text-align: center;
-}
-.price-item-list h6 {
-    font-size: 20px;
-    color: #3B406C;
-    font-family: 'PoppinsLight';
-}
-.price-item-list ul li {
-    display: inline-block;
-    margin-top: 10px;
-}
-.price-item-list ul li span {
-    color: #3B406C;
-    font-size: 14px;
-    font-family: 'PoppinsSemiBold';
-}
-p.price-subscribe-btn {
-    margin-top: 40px;
-}
-.price-subscribe-btn a {
-    background-color: #F6F9FF;
-    padding: 10px 24px;
-    border-radius: 62px;
-    color: #3B406C;
-    font-size: 16px;
-    font-family: 'PoppinsLight';
-    text-decoration: none;
-}
-.price-subscribe-btn a:hover{
-    background: linear-gradient(227.39deg, #FB8DC7 7.37%, #F54EB4 113.39%);
-    color: #ffffff;
-}
 
 
 /* 9. News Letter */
