--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   Version: 1.0
 */
 
+
 /* CSS Index 
 -----------------------------------
 1. Font css
@@ -22,193 +23,238 @@
 */
 
 
-
 /* 1. Font css */
+
 @font-face {
     font-family: GeorgiaBold;
     src: url(../fonts/georgia\ bold.ttf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: AvenirRoman;
     src: url(../fonts/AvenirLTStd-Roman.otf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: AvenirLight;
     src: url(../fonts/AvenirLTStd-Light.otf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: AvenirBlack;
     src: url(../fonts/AvenirLTStd-Black.otf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: GilroySemiBold;
     src: url(../fonts/Gilroy-SemiBold.otf);
-  }
-  @font-face {
+}
+
+@font-face {
+    font-family: GilroyBold;
+    src: url(../fonts/Gilroy-Bold.otf);
+}
+
+@font-face {
     font-family: PoppinsRegular;
     src: url(../fonts/Poppins-Regular.ttf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: PoppinsBold;
     src: url(../fonts/Poppins-Bold.ttf);
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: PoppinsSemiBold;
     src: url(../fonts/Poppins-SemiBold.ttf);
-  }
+}
 
 
 /* 2. Theme default css */
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 .img {
-	max-width: 100%;
-	transition: all 0.3s ease-out 0s;
+    max-width: 100%;
+    transition: all 0.3s ease-out 0s;
 }
+
 .f-left {
-	float: left
+    float: left
 }
+
 .f-right {
-	float: right
+    float: right
 }
+
 .fix {
-	overflow: hidden
+    overflow: hidden
 }
+
 a,
 .button:hover {
-	-webkit-transition: all 0.3s ease-out 0s;
-	-moz-transition: all 0.3s ease-out 0s;
-	-ms-transition: all 0.3s ease-out 0s;
-	-o-transition: all 0.3s ease-out 0s;
-	transition: all 0.3s ease-out 0s;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -moz-transition: all 0.3s ease-out 0s;
+    -ms-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
 }
+
 a:focus,
 .button:focus {
-	text-decoration: none;
-	outline: none;
+    text-decoration: none;
+    outline: none;
 }
+
 a:focus,
 a:hover,
 .portfolio-cat a:hover,
 .footer -menu li a:hover {
-	color: #2B96CC;
-	text-decoration: none;
+    color: #2B96CC;
+    text-decoration: none;
 }
+
 a,
 button {
-	color: #1696e7;
-	outline: medium none;
+    color: #1696e7;
+    outline: medium none;
 }
+
 button:focus {
-  outline: 0 none;
+    outline: 0 none;
 }
+
 .uppercase {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
+
 .capitalize {
-	text-transform: capitalize;
+    text-transform: capitalize;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-family: 'Poppins', sans-serif;
-	font-weight: normal;
-	color: #333333;
-	margin-top: 0px;
-	font-style: normal;
-	font-weight: 400;
-	text-transform: normal;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    color: #333333;
+    margin-top: 0px;
+    font-style: normal;
+    font-weight: 400;
+    text-transform: normal;
 }
+
 h1 a,
 h2 a,
 h3 a,
 h4 a,
 h5 a,
 h6 a {
-	color: inherit;
+    color: inherit;
 }
+
 h1 {
-	font-size: 40px;
-	font-weight: 500;
+    font-size: 40px;
+    font-weight: 500;
 }
+
 h2 {
-	font-size: 35px;
+    font-size: 35px;
 }
+
 h3 {
-	font-size: 28px;
+    font-size: 28px;
 }
+
 h4 {
-	font-size: 22px;
+    font-size: 22px;
 }
+
 h5 {
-	font-size: 18px;
+    font-size: 18px;
 }
+
 h6 {
-	font-size: 16px;
+    font-size: 16px;
 }
+
 ul {
-	margin: 0px;
-	padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
+
 li {
-	list-style: none
+    list-style: none
 }
+
 p {
-	font-size: 17px;
-	font-weight: normal;
-	line-height: 30px;
-	color: #777777;
-	margin-bottom: 15px;
+    font-size: 17px;
+    font-weight: normal;
+    line-height: 30px;
+    color: #777777;
+    margin-bottom: 15px;
 }
+
 hr {
-	border-bottom: 1px solid #eceff8;
-	border-top: 0 none;
-	margin: 30px 0;
-	padding: 0;
+    border-bottom: 1px solid #eceff8;
+    border-top: 0 none;
+    margin: 30px 0;
+    padding: 0;
 }
+
 label {
-	color: #7e7e7e;
-	cursor: pointer;
-	font-size: 14px;
-	font-weight: 400;
+    color: #7e7e7e;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
 }
+
 *::-moz-selection {
-	background: #d6b161;
-	color: #fff;
-	text-shadow: none;
+    background: #d6b161;
+    color: #fff;
+    text-shadow: none;
 }
+
 ::-moz-selection {
-	background: #444;
-	color: #fff;
-	text-shadow: none;
+    background: #444;
+    color: #fff;
+    text-shadow: none;
 }
+
 ::selection {
-	background: #444;
-	color: #fff;
-	text-shadow: none;
+    background: #444;
+    color: #fff;
+    text-shadow: none;
 }
+
 *::-moz-placeholder {
-	color: #555555;
-	font-size: 14px;
-	opacity: 1;
+    color: #555555;
+    font-size: 14px;
+    opacity: 1;
 }
+
 *::placeholder {
-	color: #555555;
-	font-size: 14px;
-	opacity: 1;
+    color: #555555;
+    font-size: 14px;
+    opacity: 1;
 }
+
 .section-title {
     text-align: center;
 }
+
 .section-title h2 {
     font-size: 44px;
     font-family: 'GilroyBold';
     color: #3B406C;
 }
+
 .section-title p {
     font-size: 16px;
     color: #3B406C;
@@ -219,66 +265,78 @@ label {
 
 
 /* 3. Header*/
-header{
+
+header {
     background-image: url(../img/bg/bg.jpg);
     background-size: cover;
     height: 746px;
     background-repeat: no-repeat;
     background-position: bottom;
 }
-.nav-menu{
-	width: 100%;
-	align-items: center;
+
+.nav-menu {
+    width: 100%;
+    align-items: center;
 }
+
 .navbar-top {
-	padding-top: 30px;
+    padding-top: 30px;
 }
+
 .navbar-brand img {
-	width: 162px;
-	height: 26px;
+    width: 162px;
+    height: 26px;
 }
+
 .nav-menu li {
-	margin-left: 26px;
+    margin-left: 26px;
 }
+
 .nav-menu li a {
-	color: #FFFFFF !important;
-	font-size: 16px;
-	font-family: AvenirRoman;
+    color: #FFFFFF !important;
+    font-size: 16px;
+    font-family: AvenirRoman;
     line-height: 26px;
 }
+
 .nav-menu li a:hover {
-	font-weight: bold;
+    font-weight: bold;
 }
+
 .nav-menu-right li a {
-	color: #ffffff;
-	font-family: GilroySemiBold;
-	font-size: 14px;
+    color: #ffffff;
+    font-family: GilroySemiBold;
+    font-size: 14px;
     padding: 0px;
     margin-left: 24px;
     line-height: 24px;
-   
 }
+
 .nav-menu-right li.register a {
-	background-color: black;
+    background-color: #3B406C;
     padding: 10px 24px;
     border-radius: 12px;
+    font-size: 14px;
+    font-family: GilroyBold;
+    line-height: 16px;
 }
+
 .nav-menu-right li.login a:hover {
-	color: #ffffff;
+    color: #ffffff;
     border-bottom: 1px solid #ffffff;
     padding-bottom: 4px;
     padding-top: 5px;
 }
-.nav-menu-right li.register a:hover{
+
+.nav-menu-right li.register a:hover {
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 12%);
     color: #ffffff;
 }
 
 
 /* 4. Header Banner */
-.banner {
 
-}
+.banner {}
 
 .banner-content h1 {
     font-size: 80px;
@@ -286,6 +344,7 @@ header{
     font-family: AvenirLight;
     line-height: 90px;
 }
+
 .banner-content p {
     color: #ffffff;
     font-size: 18px;
@@ -295,6 +354,7 @@ header{
     margin-top: 16px;
     line-height: 28px;
 }
+
 .banner-content a {
     padding: 17px 44px;
     background: linear-gradient(180deg, #FFAD32 0%, #FF6F44 100%);
@@ -305,17 +365,22 @@ header{
     font-family: AvenirBlack;
     line-height: 26px;
 }
-.banner-colum{
+.banner-content a.success-story{
+    background: transparent;
+    text-decoration: underline;
+}
+
+.banner-colum {
     z-index: 1;
 }
+
 .banner-content a:hover {
-    
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
 }
 
 
-
 /* 5. Feature css */
+
 section.feature {
     background: #ffffff;
     margin-top: 130px;
@@ -343,19 +408,15 @@ section.feature {
     top: 90px;
     right: 147px;
 }
-.feature-list{
+
+.feature-list {
     background: #7f40d7;
     text-align: center;
-
     clip-path: polygon(0 0, 100% 0, 100% 99%, 93% 97%, 53% 76%, 7% 98%, 0 100%);
     border-radius: 24px;
-
 }
-.feature-list:hover {
 
-
-  
-}
+.feature-list:hover {}
 
 .feature-list span {
     width: 44px;
@@ -366,22 +427,23 @@ section.feature {
 }
 
 
-
-
 /* 5. Feature css */
+
 section.relationship {
     background: #ffffff;
-    padding: 110px 0px 0px  0px;
+    padding: 110px 0px 0px 0px;
 }
+
 .relationship-container {
     padding-left: 100px;
     padding-right: 100px;
 }
-.relationship-colum{
-    padding-right: 100px;
 
+.relationship-colum {
+    padding-right: 100px;
 }
-.relationship-img img{
+
+.relationship-img img {
     width: 100%;
 }
 
@@ -396,6 +458,7 @@ section.relationship {
     line-height: 54px;
     margin-top: 14px;
 }
+
 .relationship-content p {
     color: #3B406C;
     font-size: 16px;
@@ -404,6 +467,7 @@ section.relationship {
     margin-bottom: 50px;
     margin-top: 20px;
 }
+
 .relationship-content a {
     border-radius: 82px;
     font-size: 16px;
@@ -413,14 +477,14 @@ section.relationship {
     color: #ffffff;
     background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
 }
+
 .relationship-content a:hover {
-    
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
 }
 
 
-
 /* 6. How it work */
+
 .how-work-area {
     background-image: url(../img/feature/how_work.png);
     background-size: contain;
@@ -429,7 +493,6 @@ section.relationship {
     width: 100%;
     background-position: right;
 }
-
 
 .how-work-content {
     padding-left: 14px;
@@ -442,6 +505,7 @@ section.relationship {
     line-height: 54px;
     margin-top: 14px;
 }
+
 .how-work-content p {
     color: #3B406C;
     font-size: 16px;
@@ -450,6 +514,7 @@ section.relationship {
     margin-bottom: 50px;
     margin-top: 20px;
 }
+
 .how-work-content a {
     border-radius: 82px;
     font-size: 16px;
@@ -459,36 +524,36 @@ section.relationship {
     color: #ffffff;
     background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
 }
+
 .how-work-content a:hover {
-    
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
 }
 
 
-
 /* 6. pricing */
-.price{
 
-}
-.price-heading{
+.price {}
+
+.price-heading {
     text-align: center;
 }
+
 .price-list {
     text-align: center;
     background: #F8FAFF;
     padding: 44px 60px;
     border-radius: 14px;
-  
 }
-.price-list:hover{
+
+.price-list:hover {
     clip-path: polygon(0 0, 100% 0, 100% 99%, 93% 97%, 53% 90%, 7% 98%, 0 100%);
     border-radius: 24px;
     transition: .5s;
     background-color: #ffffff;
-
 }
-.price-list-shadow:hover{
-    filter: drop-shadow( 30px 30px 90px rgba(8, 36, 80,.16));
+
+.price-list-shadow:hover {
+    filter: drop-shadow( 30px 30px 90px rgba(8, 36, 80, .16));
 }
 
 .price-list h3 {
@@ -535,28 +600,79 @@ section.relationship {
 }
 
 
+/* 6. How it work */
 
+.social-work-area {
+    background-image: url(../img/feature/social_work.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 740px;
+    width: 100%;
+    background-position: left;
+}
 
+.social-work-row {
+    display: flex;
+    flex-direction: row-reverse;
+}
 
+.social-work-content {
+    padding-left: 14px;
+}
 
+.social-work-content h2 {
+    color: #3B406C;
+    font-size: 44px;
+    font-family: GeorgiaBold;
+    line-height: 54px;
+    margin-top: 14px;
+}
+
+.social-work-content p {
+    color: #3B406C;
+    font-size: 16px;
+    font-family: PoppinsRegular;
+    line-height: 26px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+
+.social-work-content a {
+    border-radius: 82px;
+    font-size: 16px;
+    padding: 10px 24px;
+    text-decoration: none;
+    font-family: PoppinsSemiBold;
+    color: #ffffff;
+    background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
+}
+
+.social-work-content a:hover {
+    box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
+}
 
 
 /* 6. LiveChat */
+
 section.livechat {
     background: #ffffff;
     padding: 0px 0px 16px 0px;
-    margin-top:-50px;
+    margin-top: -50px;
 }
+
 .livechat-container {
     padding-left: 56px;
     padding-right: 56px;
 }
+
 .livechat-img img {
     width: 100%;
 }
+
 .livechat-img {
     padding-left: 100px;
 }
+
 .livechat-content h2 {
     color: #3B406C;
     font-size: 44px;
@@ -564,6 +680,7 @@ section.livechat {
     margin-top: -50px;
     line-height: 54px;
 }
+
 .livechat-content p {
     color: #3B406C;
     font-size: 16px;
@@ -572,25 +689,30 @@ section.livechat {
     margin-bottom: 10px;
     margin-top: 20px;
 }
+
 .livechat-content a {
     border-radius: 82px;
     font-size: 16px;
     padding: 10px 24px;
     text-decoration: none;
-    font-family:PoppinsRegular;
+    font-family: PoppinsRegular;
     color: #ffffff;
     background-image: linear-gradient(#F54EB4, #F54EB4);
 }
+
 .livechat-content a:hover {
     background-image: linear-gradient(#ff42a6, #e19dc6);
 }
+
 .livechat-item-check li {
     margin-top: 16px;
 }
+
 .livechat-item-check li img {
     width: 30px;
     margin-right: 10px;
 }
+
 .livechat-item-check li span {
     color: #3B406C;
     font-size: 16px;
@@ -599,6 +721,7 @@ section.livechat {
 
 
 /* 7. Client */
+
 section.client-section {
     background-image: url('../img/testimonial/client_bg.png');
     background-size: 100% 100%;
@@ -606,15 +729,18 @@ section.client-section {
     padding-top: 100px;
     height: 791px;
 }
+
 .client-heading {
     text-align: center;
 }
+
 .client-heading h4 {
     color: #F669D6;
     font-size: 20px;
     font-family: 'PoppinsLight';
     line-height: 20px;
 }
+
 .client-heading h2 {
     font-size: 44px;
     color: #3B406C;
@@ -623,9 +749,11 @@ section.client-section {
     line-height: 54px;
     margin-top: 18px;
 }
+
 .slick-track {
     padding-bottom: 30px;
 }
+
 .client-content {
     background: #ffffff;
     margin-left: 20px;
@@ -633,21 +761,24 @@ section.client-section {
     padding: 40px 20px 60px 60px;
     border-radius: 20px;
 }
+
 .client-content:hover {
-   /* box-shadow: -10px 80px 160px 0 rgb(1 47 16 / 8%); */
-   box-shadow: 0px 10px 20px 0 rgb(1 47 16 / 8%);
+    /* box-shadow: -10px 80px 160px 0 rgb(1 47 16 / 8%); */
+    box-shadow: 0px 10px 20px 0 rgb(1 47 16 / 8%);
 }
 
 .client-content img {
     width: 100px;
 }
+
 .client-content h2 {
     font-size: 20px;
     color: #3B406C;
-    font-family:PoppinsBold ;
+    font-family: PoppinsBold;
     margin-top: 20px;
-    line-height:30px;
+    line-height: 30px;
 }
+
 .client-content h3 {
     font-size: 16px;
     color: #3B406C;
@@ -655,16 +786,20 @@ section.client-section {
     margin-top: 4px;
     line-height: 26px;
 }
+
 .client-content ul li {
     display: inline-block;
     margin-left: 10px;
 }
+
 .client-content ul li img {
     width: 16px;
 }
+
 .client-content ul {
     margin-left: -10px;
 }
+
 .client-content p {
     font-size: 16px;
     color: #3B406C;
@@ -672,14 +807,17 @@ section.client-section {
     margin-top: 10px;
     line-height: 26px;
 }
+
 .slick-prev {
     left: -10px;
     z-index: 1;
 }
+
 .slick-next {
     right: 15px;
     z-index: 1;
 }
+
 .slick-next:before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
@@ -690,6 +828,7 @@ section.client-section {
     color: #52527c;
     box-shadow: 1px 1px 3px #cbcbcb;
 }
+
 .slick-prev:before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
@@ -702,24 +841,28 @@ section.client-section {
 }
 
 
-
 /* 9. News Letter */
+
 section.newsletter {
     background: #ffffff;
     padding: 82px 0px 240px 0px;
 }
+
 .newsletter-img img {
     width: 100%;
 }
+
 .newsletter-content {
     padding-left: 96px;
 }
+
 .newsletter-content h4 {
     color: #F669D6;
     font-size: 20px;
     font-family: 'PoppinsLight';
     line-height: 20px;
 }
+
 .newsletter-content h2 {
     color: #3B406C;
     font-size: 44px;
@@ -727,6 +870,7 @@ section.newsletter {
     line-height: 54px;
     margin-top: 16px;
 }
+
 .newsletter-content p {
     color: #3B406C;
     font-size: 16px;
@@ -735,6 +879,7 @@ section.newsletter {
     margin-bottom: 44px;
     margin-top: 20px;
 }
+
 .newsletter-content a {
     border-radius: 82px;
     font-size: 16px;
@@ -744,25 +889,33 @@ section.newsletter {
     color: #ffffff;
     background: linear-gradient(180deg, #F769D6 0%, #BE349E 100%);
 }
+
 .newsletter-content a:hover {
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
 }
-.newsletter-content a.contact-us{
-    gradient(180deg, #6546CB -2.54%, #974EF5 98.71%);
+
+.newsletter-content a.contact-us {
+    gradient(180deg,
+    #6546CB -2.54%,
+    #974EF5 98.71%);
     margin-left: 16px;
 }
-.newsletter-content a.contact-us:hover{
+
+.newsletter-content a.contact-us:hover {
     box-shadow: 0px 20px 40px 0 rgb(72 10 45 / 10%);
 }
 
+
 /* 10. Footer */
-footer{
-   background-color: #3B406C;
+
+footer {
+    background-color: #3B406C;
     padding: 50px 0px;
-    margin-top:200px;
+    margin-top: 200px;
     position: relative;
 }
-.footer-shape{
+
+.footer-shape {
     top: -96px;
     left: 0;
     right: 0;
@@ -773,13 +926,16 @@ footer{
     height: 100px;
     background-size: cover;
 }
+
 .footer-container {
     margin-top: 50px;
 }
+
 .footer-part1 img {
     width: 162px;
     height: 30px;
 }
+
 .footer-part1 p {
     color: #ffffff;
     font-size: 14px;
@@ -787,17 +943,21 @@ footer{
     line-height: 24px;
     margin-top: 24px;
 }
+
 .footer-part1 ul {
     margin-top: 30px;
 }
+
 .footer-part1 ul li {
     display: inline-block;
     margin-left: 10px;
 }
+
 .footer-part1 ul li a {
     padding: 10px 14px;
     border-radius: 52px;
 }
+
 .footer-part1 ul li a i {
     color: #ffffff;
     font-size: 20px;
@@ -806,15 +966,18 @@ footer{
 .footer-part1 ul li a:hover i {
     color: #d448b4;
 }
+
 .footer-part h3 {
     color: #ffffff;
     font-size: 14px;
     font-family: 'PoppinsSemiBold';
     line-height: 24px;
 }
+
 .footer-part ul li {
     margin-top: 10px;
 }
+
 .footer-part ul li a {
     color: #ffffff;
     text-decoration: none;
@@ -822,16 +985,18 @@ footer{
     font-family: 'PoppinsRegular';
     line-height: 24px;
 }
-.footer-part ul li a:hover {
-   font-weight: 900;
 
+.footer-part ul li a:hover {
+    font-weight: 900;
 }
+
 .footer-part4 p {
     color: #ffffff;
     font-size: 14px;
     font-family: 'PoppinsRegular';
     line-height: 24px;
 }
+
 .footer-subscribe {
     width: 256px;
     height: 47px;
@@ -843,11 +1008,13 @@ footer{
     border-radius: 82px;
     margin-top: 26px;
 }
+
 .footer-subscribe form input {
     border: none;
     background: transparent;
     height: 30px;
 }
+
 .footer-subscribe form button {
     border: none;
     padding: 5px 10px;
@@ -855,31 +1022,13 @@ footer{
     color: #FB8DC7;
 }
 
-.footer-subscribe form{
+.footer-subscribe form {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-
 .form-control:focus {
     box-shadow: none;
     background: transparent;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
