--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,7 @@ section.newsletter {
 
 .newsletter-shape {
     position: absolute;
-    top: 0p;
+    top: 0px;
     top: 20px;
     right: 475px;
 }
